# skar

./: .gitignore  .history  Cargo.toml  Makefile  README.md  skar.toml
.github/workflows/: ci.yaml  coverage.yaml
format/: Cargo.toml
format/src/: lib.rs
format/src/types/: data.rs  fixed_size_data.rs  mod.rs  quantity.rs  transaction_status.rs  transaction_type.rs  uint.rs
format/tests/: deserialize_json.rs
ingest/: Cargo.toml
ingest/src/: config.rs  ingest.rs  lib.rs  types.rs  validate.rs
integration-test/: package.json  pnpm-lock.yaml
integration-test/src/: compare-get-logs.js  eth-archive-queries.js  rpc-queries.js  skar-queries.js  utils.js
net-types/: Cargo.toml  build.rs  skar_net_types.capnp
net-types/src/: lib.rs
rpc-client/: Cargo.toml
rpc-client/src/: config.rs  endpoint.rs  error.rs  lib.rs  rpc_client.rs  types.rs
rpc-client/test-data/: eth_blockNumber.json  eth_getBlockByNumber_batch.json  eth_getLogs.json  eth_getTransactionReceipt_batch.json
rpc-types/: Cargo.toml
skar/: Cargo.toml
skar-client/: Cargo.toml
skar-client/src/: lib.rs
skar-client/tests/: api_test.rs
skar/src/: args.rs  build_parquet_idx.rs  config.rs  db.rs  hashmap.rs  lib.rs  main.rs  open_file_reader.rs  query.rs  schema.rs  server.rs  skar.rs  skar_runner.rs  state.rs  tests.rs  types.rs  validate_parquet.rs  write_parquet.rs
skar/src/db/: bloom_filter.rs  mod.rs  types.rs
skar/src/query/: data_provider.rs  execution.rs  handler.rs  mod.rs  pool.rs
skar/src/query/execution/: mod.rs
skar/test-data/: block_data.json  receipt_data.json
