[package]
name = "skar-format"
version = "0.0.1"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
derive_more = "0.99"
hex = "0.4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_test = "1"
hex-literal = "0.4"
serde_json = "1"
