[package]
name = "skar-rpc-client"
version = "0.0.1"
edition = "2021"

[dependencies]
thiserror = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
log = "0.4"
serde_json = "1"
tokio = "1"
url = { version = "2", features = ["serde"] }
rand = "0.8"
fastrange-rs = "0.1"

skar-format = { path = "../format" }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "gzip"]

[dev-dependencies]
hex-literal = "0.4"
