[package]
name = "skar-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
url = { version = "2", features = ["serde"] }
arrow2 = { git = "https://github.com/ozgrakkurt/arrow2", branch = "ipc-writer-offset", features = ["io_json", "io_ipc", "io_ipc_compression"] }
serde_json = "1"
capnp = "0.17.2"

skar-net-types = { path = "../net-types" }
skar-format = { path = "../format" }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "gzip"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
