[package]
name = "skar"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.7"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
arrow = "43.0.0"
arc-swap = "1"
datafusion = "28.0.0"
parquet = "43.0.0"
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth" }
page_size = "0.5.0"
sbbf-rs-safe = "0.3.2"
wyhash = "0.5.0"
futures = "0.3"
arrayvec = { version = "0.7", features = ["serde"] }
itertools = "0.11"
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["compression-gzip"] }
serde_json = "1"
hex = "0.4"
ethbloom = "0.13"

skar-format = { path = "../format" }
skar-ingest = { path = "../ingest" }
