[package]
name = "skar"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.7"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
arc-swap = "1"
sbbf-rs-safe = "0.3.2"
wyhash = "0.5.0"
futures = "0.3"
arrayvec = { version = "0.7", features = ["serde"] }
itertools = "0.11"
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["compression-gzip"] }
serde_json = "1"
prefix-hex = "0.7.1"
ethbloom = "0.13"
arrow2 = { version = "0.17.3", features = ["io_parquet", "io_parquet_lz4", "compute", "io_json"] }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth" }
bincode = "1.3.3"
page_size = "0.5.0"

skar-format = { path = "../format" }
skar-ingest = { path = "../ingest" }

[dev-dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]

[dev-dependencies]
hex-literal = "0.4"
